fix(plugins/plugin-core-support): getting started text is stretched in non-English

--- a/plugins/plugin-core-support/web/css/about.css
+++ b/plugins/plugin-core-support/web/css/about.css
@@ -3,10 +3,6 @@
   flex: 1;
 }
 
-.about-window-long-description {
-  text-align: justify;
-}
-
 .about-window .logo {
   display: flex;
   flex-direction: column;
